Done styling on the help page and also added a none text-select feature to prevent the text from being selected by mistake

--- a/help.html
+++ b/help.html
@@ -3,7 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dig UP! HELP</title>
+    <title>Dig UP! HELP!</title>
+
+    <style>
+        body {
+            overflow-y: hidden;
+            overflow-x: hidden;
+            font-family: "Courier new", "Cambria";
+            margin: 20px;
+            user-select: none;
+        }
+
+        header {
+            text-align: center;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        details {
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
