--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 margin: 20px;
                 min-width: 500px;
                 min-height: 400px;
+                user-select: none;
             }
 
             header {
