Add information about biomes and the unique rarities to the items in the biomes.

--- a/help.html
+++ b/help.html
@@ -38,6 +38,10 @@
             <summary><b>Introduction</b></summary>
             <p>This is a simple memory based game. It will present a few different minigames with different aspects which present a memory based retention theme. This is part of my course project for the second milestone.</p>
         </details>
+        <details>
+            <summary><b>Biomes</b></summary>
+            <p>There are sevel different biomes within the game that are unlocked when you upgrade your pocket scanner. This will mean that you can find other biomes that have different item layouts and chances. In the game there are 10 biome types.<br><br><b>Plains</b> - this is the original biome on which you will probably spend some time, this has a basic general item chance.<br><b>Desert</b> - within this biome fossils have a higher chance of being obtained when you select locations of interest.<br><b>Forest</b> - within this biome you have a higher chance of obtaining certain gems and some ore types.<br><b>Swamp</b> - within this biome you have a higher chance of obtaining certain gems and some ore types.<br><b>Mountain</b> - within this biome you have an increased chance of obtaining emeralds and a small chance of geodes.<br><b>Taiga</b> - within this biome you are able to obtain fossils and geodes at equal chance.<br><b>Jungle</b> - within this biome you are able to obtain geodes and ores.<br><b>Red Desert, Savannah and Marsh</b> - these are extra biomes with the ability to obtain extensive ores and fossils.</p>
+        </details>
     </main>
 </body>
 </html>
