--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             let sequenceDisplayTime;
 
             // Create an empty array which will be used as the inventory, it will hold the values as a name "" - string and then a number, which will be the quantity or the percentage of how well the item was obtained.
-            let usersInventory = [];
+            let usersInventory = ["Gold ore", 10, "Iron ore", 20];
 
             // This will be used later as a way of ungrading the users tools what they use to give them more attempts, and less of a length on the overal sequences.
             let usersToolbelt = [1, 1, 1];
@@ -153,8 +153,8 @@
 
             // These are constant arrays of text outputs that will be displayed on the textbox and also the menu options when relevent.
 
-            const textboxMessages = ["Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You"]
-            const MenuOptions = [["World Map", "Museum", "Inventory", "Upgrade"],["Dirty Plain", "Plains", "Desert", "Forest", "Swamp", "Mountain", "Taiga", "Jungle", "Red Desert", "Savannah"], ["Process", "View Museum"], ["Pocket Scanner", "Pickaxe", "Shovel"]]
+            const textboxMessages = ["Welcome to Dig Up! This is a game based around finding things from different terrains. There are three mini-games within this game.", "You can use the W and S key to navigate through the menus that you'll be displayed, and the item on which is currently selected will be in bold.", "You will be able to select a terrain by going into the World Map and then selecting the type of terrain you would like to use. Different terrains have different items which you can obtain. More information about this is on the help page. Also you can unlock different terrains which will give you different items or more items depending on the terrain type. ", "Once you begin the game you will be shown a series of black tiles, (points-of-interest), which will display for around 4 seconds and then will disappear. The job is to try and click your mouse cursor over the locations that where displayed. If you successfully do this you will gain rarer items which can have a chance to be processed in the museum.", "Once you have used up all your attempts then you will be shown a series of random sequences with a set length, (the length increases as you play the game), depending on how well you repeat these sequences will effect the items you get. Rare items will have an overal quality and this is determind by how well you repeat this sequence. The sequence will consist of W,A,S and D characters that can be typed in once the sequence has been removed from the screen.", "Within the museum you can be able to process specific items, these items can not be stacked and have a quality. You will then be able to go though a 'processing' system to be able to put them in the museum. To do this you need to complete another sequence, which then also alters and changes the quality further.", "You can also use the Inventory tab just to see what is in your inventory.", "Lastly, the upgrade tab is used to upgrade any of your current tools that you use. The scanner is upgraded using gold ore, and the pickaxe and shovel are upgraded using iron ore. You must keep in mind that the level of the scanner will give you more attempts and possibly new terrain types. Whilst upgrading the tools will decrease the sequence lengths.", "If you have entered the wrong menu you can still use escape to come back to the main menu. Although you can not leave a game when it is playing.", "Use W and S to select what you want to do on the Main Menu. Once you see the item is bold, its selected and then click either the mouse, spacebar or enter to confirm.", "This is a list of the terrain types that you can currently access at your level.", "Welcome to the Museum, you can either see what items you have already processed or begin processing items if you have any.", "This is the inventory screen.", "This is the upgrades page, if you have any items you maybe able to upgrade your tools. <br> Gold ore is needed to upgrade the scanner. <br> Iron ore is needed to upgrade the tools. <br> The amount of materials needed will increase depending on the level they are at.", "Terrain is being generated.", "You will be shown the points interest that are on the map. Try and remember these locations.", "Use your attempts to place down where you want to dig. When an attempt has been deducted that location has been added.", "Sequence is being created", "This is the sequence that you need to try and remember.", "Can you repeat that sequence?"]
+            const MenuOptions = [["World Map", "Museum", "Inventory", "Upgrade"],["Dirty Plain", "Plains", "Desert", "Forest", "Swamp", "Mountain", "Taiga", "Jungle", "Red Desert", "Savannah"], ["Process", "View Museum"], ["Pocket Scanner || Level ", "Pickaxe || Level ", "Shovel || Level "]]
 
             // This is an array of all the common items within the game
             const commonItems = ["Dirt", "Stone", "Gold ore", "Iron ore", "Copper ore", "Sand", "Lapis Lazuli", "Amber"];
@@ -182,10 +182,11 @@
                 /* This is my main function within my script, this will make sure that the parts of the script that are needed will always run. */
                 clear();
 
-                textbox.innerHTML = textboxMessages[gameState]
+                textbox.innerHTML = textboxMessages[gameState]+" "
 
                 if (keyCode > 0) {
                     if (keyCode == 87) {
+                        // Check if the keycode is W, if the gameState is repeat sequence then add W to the users sequence. If not and the user is in a menu, change the option difference. Meaning that I can apply a negative difference to the currently selected option to move the selected option to a different location.
                         if (gameState == gameStates.REPEAT_SEQUENCE) {
                             usersSequence.push("W");
                         } else {
@@ -193,6 +194,7 @@
                         }
                     }
                     if (keyCode == 83) {
+                        // Check if the keycode is S, if the gameState is repeat sequence then add S to the users sequence. If not and the user is in a menu, change the option difference. Meaning that I can apply a positive difference to the currently selected option to move the selected option to a different location.
                         if (gameState == gameStates.REPEAT_SEQUENCE) {
                             usersSequence.push("S");
                         } else {
@@ -200,20 +202,24 @@
                         }
                     }
                     if (keyCode == 65) {
+                        // This checks if the keycode is A, and adds it to the sequence array if the gamestate is repeat sequence.
                         if (gameState == gameStates.REPEAT_SEQUENCE) {
                             usersSequence.push("A");
                         }
                     }
                     if (keyCode == 68) {
+                        // This checks if the keycode is D, and adds it to the sequence array if the gamestate is repeat sequence.
                         if (gameState == gameStates.REPEAT_SEQUENCE) {
                             usersSequence.push("D");
                         }
                     }
                     if (keyCode == 27 && gameState > gameStates.MAIN_MENU) {
+                        // This checks if the keycode is escape, and will set a boolean which will flag the script to move the user to the main menu if possible.
                         menuReturn = true;
                         chosenMenuOption = -1;
                     }
                     if (keyCode == 13 || keyCode == 32) {
+                        //  Check if the keycode is either enter or spacebar, and then progress the textbox or select the chosen option.
                         if (gameState < gameStates.MAIN_MENU) {
                             chosenMenuOption = 0
                         } else {
@@ -225,11 +231,13 @@
 
                 if (click) {
                     if (gameState < gameStates.MAIN_MENU) {
+                        // This will check what the state is if its the tutorial I will change a variable to flag that the textbox needs to progress. If the game state is not before the main menu then it will inherit the option that is currently selected in bold.
                             chosenMenuOption = 0
                         } else {
                             chosenMenuOption = selectedMenuOption;
                         }
                     if (gameState == gameStates.BEGIN_GAME && usersAttempts > 0) {
+                        // This will add the users Mouse Position to the users pos array and use one attempt, this is how I begin to track and locate the mouse and where it has been clicked whilst playing the game.
                         usersPosArray.push(mouseX);
                         usersPosArray.push(mouseY);
                         usersAttempts -= 1
@@ -238,6 +246,8 @@
                 }
 
                 if (gameState < gameStates.MAIN_MENU) {
+                    //  This will add a message to the texbox to tell the user how to continue the tutorial. Will also tell the user what they can do to progress the textbox.
+                    textbox.innerHTML = textbox.innerHTML+"<br>You can use the mouse, spacebar or the enter button to continue."
                     if (chosenMenuOption == 0) {
                         gameState += 1;
                         chosenMenuOption = -1;
@@ -245,6 +255,7 @@
                 }
 
                 if (selectedOptionDifference != 0) {
+                    // This will process which of the items on the menu is being selected. This is by checking which menu the user is on and then altering the chosen option difference. It will let me be able to allow the player to select one of the options.
                     if (gameState == gameStates.MAIN_MENU) {
                         selectedMenuOption = range(selectedMenuOption+selectedOptionDifference, 0, MenuOptions[0].length-1);
                     }
@@ -261,8 +272,10 @@
                 }
 
                 if (gameState == gameStates.MAIN_MENU) {
+                    // This is the main menu screen and displays the different options. Also allows for the ability to be able to select  an option of the menu.
                     textbox.innerHTML = textbox.innerHTML+MenuPrintout(MenuOptions[0], selectedMenuOption);
                     if (chosenMenuOption != -1) {
+                        // Check if the user has used one of the continue buttons. Then register that action and do the corresponding actions to the script depending on the current gameState. This will just redirect the player to one of his chosen options from the main menu.
                         gameState = gameState+chosenMenuOption+1;
                         chosenMenuOption = -1;
                         selectedMenuOption = 0
@@ -271,7 +284,8 @@
 
                 if (gameState == gameStates.MUSEUM_MENU) {
                     if (usersInventory.length > 0) {
-                        textbox.innerHTML = textbox.innerHTML+"<br><b>"+MenuOptions[2]+"</b>"
+                        // This is the museum menu which will display if the inventory has any contents.
+                        textbox.innerHTML = textbox.innerHTML+"<br>"+MenuPrintout(MenuOptions[2], selectedMenuOption)
                     } else {
                         textbox.innerHTML = textbox.innerHTML+"<br> You have no items that can be processed within the museum."
                         chosenMenuOption = -1
@@ -280,6 +294,7 @@
 
                 if (gameState == gameStates.INVENTORY_SCREEN) {
                     if (usersInventory.length > 0) {
+                        // This is the inventory screen which will only display the contents of the inventory if they have any items in the inventory.
                         textbox.innerHTML = textbox.innerHTML+"<br>"+usersInventory
                     } else {
                         textbox.innerHTML = textbox.innerHTML+"<br> There is no items within the inventory to display."
@@ -288,15 +303,32 @@
                 }
 
                 if (gameState == gameStates.UPGRADE_MENU) {
-                    if (usersInventory.length > 0) {
-                        textbox.innerHTML = textbox.innerHTML+"<br>"+MenuPrintout(MenuOptions[3], selectedMenuOption)
-                    } else {
+                    if (usersInventory.length > 0) { 
+                        // Check if the user is in the update meny and will display two different outputs depending on whether the player has got an item in their inventory.
+                        textbox.innerHTML = textbox.innerHTML+"<br>"+MenuPrintout((mergeTwoArray(MenuOptions[3], usersToolbelt)), selectedMenuOption)
+                        if (chosenMenuOption == 0 && checkItemAmount(usersInventory, "Gold ore") >= usersToolbelt[0]) {
+                            removeItemFromInventory("Gold ore", usersToolbelt[0])
+                            usersToolbelt[0] += 1
+                            chosenMenuOption = -1;
+                        } else if (chosenMenuOption == 1 && checkItemAmount(usersInventory, "Iron ore") >= usersToolbelt[1]) {
+                            removeItemFromInventory("Iron ore", usersToolbelt[1])
+                            usersToolbelt[1] += 1
+                            chosenMenuOption = -1;
+                        } else if (chosenMenuOption == 2 && checkItemAmount(usersInventory, "Iron ore") >= usersToolbelt[2]) {
+                            removeItemFromInventory("Iron ore", usersToolbelt[2])
+                            usersToolbelt[2] += 1
+                            chosenMenuOption = -1;
+                        } else {
+                            textbox.innerHTML = textbox.innerHTML+"<br>"+"You can't upgrade this item your missing the needed items."
+                        }
+                    } else if (chosenMenuOption > -1) {
                         textbox.innerHTML = textbox.innerHTML+"<br> You have no gold or iron ore in your inventory to upgrade your tools or the pocket scanner."
                         chosenMenuOption = -1
                     }
                 }
 
                 if (gameState >= gameStates.MAIN_MENU && gameState <= gameStates.UPGRADE_MENU && menuReturn) {
+                    // This will make the escape button return to the main menu when the user is in a different menu then the main one.
                     menuReturn = false;
                     gameState = gameStates.MAIN_MENU;
                     selectedMenuOption = 0;
@@ -309,7 +341,8 @@
                         gameState = gameStates.RENDER_TERRAIN; // GameState change to RENDER TERRAIN
                         biomeType = getBiomeVal(MenuOptions[1][chosenMenuOption]);
                         nodeDisplayTime = 100;
-                        usersAttempts = 3;
+                        usersAttempts = usersToolbelt[0]+2;
+                        sequenceLength = range(4+usersToolbelt[0]-Math.round((usersToolbelt[1]+usersToolbelt[2])/2), 2, 12)
                     }
                 }
 
@@ -398,6 +431,15 @@
                 }
             }
 
+            function mergeTwoArray(arrayA, arrayB) {
+                let i;
+                let temp_array = []
+                for (i = 0; i < arrayA.length; i++) {
+                    temp_array.push(arrayA[i]+" "+arrayB[i]);
+                }
+                return temp_array;
+            }
+
             function checkItemAmount(array, item) {
                 // Returns either 0 or the number of items which are in the inventory. The array must be singular and also be in a structure of itemName, itemQuantity.
                 if (array.indexOf(item) != -1) {
@@ -408,13 +450,18 @@
             }
 
             function removeItemFromInventory(item, quantity) {
-                if (checkItemAmount(usersInventory, item)-quantity > 0 && commonItems.indexOf(item) != -1) {
-                    array[array.indexOf(item)+1]-quantity
-                } else if (checkItemAmount(usersInventory, item)-quantity > 0 || commonItems.indexOf(item) == -1) {
-                    array.splice([array.indexOf(item)], 2);
-                } else {
-                    return false;
+                if (usersInventory.includes(item)) {
+                    for (i = 0; i < usersInventory.length; i = i+2) {
+                        if (usersInventory[i] == item && usersInventory[i+1] > quantity) {
+                            usersInventory[i+1] = usersInventory[i+1]-quantity;
+                            return true;
+                        } else if (usersInventory[i] == item && usersInventory[i+1] == quantity) {
+                            inventory.splice(i, 2);
+                            return true;
+                        }
+                    }
                 }
+                return false;
             }
 
             function checkPos(x, y, arrayB, sizeX, sizeY) {
